--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -26,7 +26,7 @@ body {
         @extend.Able-Regular;
         // top: 60px;
         // margin-top: -95px;
-        margin-top: -10%;
+        margin-top: -12%;
         // left: 50%;
         // transform: translateX(-50%);
         text-align: center;
